adding jupyter example

--- a/Data_query_example.ipynb
+++ b/Data_query_example.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from arablepy import arablepy\n",
+    "import arablepy\n",
     "import pandas as pd\n",
     "import os\n",
     "pd.options.display.max_columns = None\n",
