--- a/Data_query_example.ipynb
+++ b/Data_query_example.ipynb
@@ -70,7 +70,7 @@
     "device_ids = [i for i in devices['name']]\n",
     "\n",
     "# Query data for available devices\n",
-    "client.data('calibrated', devices=devices_ids, start_time='2020-01-01', end_time='2020-03-26')"
+    "client.data('daily', devices=device_ids, start_time='2020-01-01', end_time='2020-03-26')"
    ]
   },
   {
@@ -99,9 +99,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
