adding new Jupyter Notebook examples

--- a/Data_query_example.ipynb
+++ b/Data_query_example.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you haven't installed pandas, seaborn, and/or matplotlib, you can do it here by using `!pip3 install ...`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -67,19 +81,11 @@
    "outputs": [],
    "source": [
     "# Grab names for devices you can see\n",
-    "device_ids = [i for i in devices['name']]\n",
+    "device_ids = ['C003048']\n",
     "\n",
     "# Query data for available devices\n",
-    "client.data('calibrated', devices=devices_ids, start_time='2020-01-01', end_time='2020-03-26')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Basic plotting:\n"
+    "df = client.data('daily', devices=device_ids, start_time='2020-03-01')\n",
+    "df"
    ]
   }
  ],
