changing query example

--- a/Jupyter Examples/Data_query_example.ipynb
+++ b/Jupyter Examples/Data_query_example.ipynb
@@ -23,12 +23,12 @@
     "import arablepy\n",
     "import pandas as pd\n",
     "import os\n",
+    "import requests\n",
     "pd.options.display.max_columns = None\n",
     "pd.set_option('max_colwidth', 40)\n",
     "import numpy as np\n",
-    "import matplotlib as plt\n",
-    "import seaborn as sns\n",
-    "from datetime import date, datetime, timedelta"
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -40,7 +40,7 @@
     "# Create a client instance\n",
     "client = arablepy.ArableClient()\n",
     "# Provide credentials\n",
-    "client.connect(email=os.environ.get('ARABLE_EMAIL'), password=os.environ.get('ARABLE_PASSWORD'))"
+    "client.connect(email='your@email.com', password='password')"
    ]
   },
   {
@@ -49,8 +49,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get available tables\n",
-    "client.schema(df=True)"
+    "# Basic data query\n",
+    "df = client.data('hourly', devices=[], start_time='2020-06-22')\n",
+    "df"
    ]
   },
   {
@@ -59,8 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get data dict for a specific table\n",
-    "client.schema('hourly',df=True)"
+    "# Get tables avaible and datadictionary for each table\n",
+    "client.schema('hourly', df=True)"
    ]
   },
   {
@@ -81,24 +82,11 @@
    "outputs": [],
    "source": [
     "# Grab names for devices you can see\n",
-    "device_ids = ['C003048']\n",
+    "device_ids = devices['name']\n",
     "\n",
     "# Query data for available devices\n",
-<<<<<<< HEAD
-    "df = client.data('daily', devices=device_ids, start_time='2020-03-01')\n",
-    "df"
-=======
-    "client.data('daily', devices=device_ids, start_time='2020-01-01', end_time='2020-03-26')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Basic plotting:\n"
->>>>>>> a844781acd8e5555842c780e445017904a022666
+    "df = client.data('daily', devices=[device_ids], start_time='2020-03-01')\n",
+    "df.to_csv('file.csv')"
    ]
   }
  ],
@@ -118,9 +106,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
